Support command-line options. Remove placeholder support since it duplicates default.